<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Catroid: An on-device visual programming system for Android devices
  ~ Copyright (C) 2010-2016 The Catrobat Team
  ~ (<http://developer.catrobat.org/credits>)
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU Affero General Public License as
  ~ published by the Free Software Foundation, either version 3 of the
  ~ License, or (at your option) any later version.
  ~
  ~ An additional term exception under section 7 of the GNU Affero
  ~ General Public License, version 3, is available at
  ~ http://developer.catrobat.org/license_additional_term
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU Affero General Public License for more details.
  ~
  ~ You should have received a copy of the GNU Affero General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/application_background_color"
              android:fitsSystemWindows="true"
              android:clipToPadding="false"
              android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/progress_circle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone" >

        <ProgressBar
            android:id="@+id/progress_bar_header"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="28dp"
        android:paddingBottom="16dp"
        android:text="@string/app_name"
        android:textColor="@color/main_menu_button_text_color"
        android:textSize="26sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="8dp"
        android:background="@color/godot_card_border" />

    <!--
        ScrollView ensures every menu button stays reachable on shorter screens
        or when the system navigation bar / gesture area takes extra space at
        the bottom - without it, the last buttons (e.g. "Upload") get clipped
        off the visible screen on many modern devices.
    -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clipToPadding="false"
        android:paddingBottom="16dp"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/main_menu_button_continue"
                style="@style/MainMenuButton"
                android:textAlignment="viewStart"
                android:layout_gravity="start"
                android:drawableLeft="@drawable/ic_main_menu_continue"
                android:drawableStart="@drawable/ic_main_menu_continue"
                android:onClick="handleContinueButton"
                android:text="@string/main_menu_continue" />

            <Button
                android:id="@+id/main_menu_button_new"
                style="@style/MainMenuButton"
                android:drawableLeft="@drawable/ic_main_menu_new"
                android:drawableStart="@drawable/ic_main_menu_new"
                android:textAlignment="viewStart"
                android:layout_gravity="start"
                android:onClick="handleNewButton"
                android:text="@string/main_menu_new" />

            <Button
                android:id="@+id/main_menu_button_programs"
                style="@style/MainMenuButton"
                android:drawableLeft="@drawable/ic_main_menu_programs"
                android:drawableStart="@drawable/ic_main_menu_programs"
                android:textAlignment="viewStart"
                android:layout_gravity="start"
                android:onClick="handleProgramsButton"
                android:text="@string/main_menu_programs" />

            <Button
                android:id="@+id/main_menu_button_help"
                style="@style/MainMenuButton"
                android:drawableLeft="@drawable/ic_main_menu_help"
                android:drawableStart="@drawable/ic_main_menu_help"
                android:textAlignment="viewStart"
                android:layout_gravity="start"
                android:onClick="handleHelpButton"
                android:text="@string/main_menu_help" />

            <Button
                android:id="@+id/main_menu_button_web"
                style="@style/MainMenuButton"
                android:drawableLeft="@drawable/ic_main_menu_community"
                android:drawableStart="@drawable/ic_main_menu_community"
                android:textAlignment="viewStart"
                android:layout_gravity="start"
                android:onClick="handleWebButton"
                android:text="@string/main_menu_web" />

            <Button
                android:id="@+id/main_menu_button_telegram"
                style="@style/MainMenuButton"
                android:drawableLeft="@drawable/ic_main_menu_community"
                android:drawableStart="@drawable/ic_main_menu_community"
                android:textAlignment="viewStart"
                android:layout_gravity="start"
                android:onClick="handleTelegramButton"
                android:text="@string/main_menu_telegram" />

            <Button
                android:id="@+id/main_menu_button_upload"
                style="@style/MainMenuButton"
                android:drawableLeft="@drawable/ic_main_menu_upload"
                android:drawableStart="@drawable/ic_main_menu_upload"
                android:textAlignment="viewStart"
                android:layout_gravity="start"
                android:onClick="handleUploadButton"
                android:text="@string/main_menu_upload" />

            <Button
                android:id="@+id/main_menu_button_import"
                style="@style/MainMenuButton"
                android:drawableLeft="@drawable/ic_main_menu_upload"
                android:drawableStart="@drawable/ic_main_menu_upload"
                android:textAlignment="viewStart"
                android:layout_gravity="start"
                android:onClick="handleImportButton"
                android:text="@string/main_menu_import" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
