<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Catroid: An on-device visual programming system for Android devices
  ~ Copyright (C) 2010-2016 The Catrobat Team
  ~ (<http://developer.catrobat.org/credits>)
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU Affero General Public License as
  ~ published by the Free Software Foundation, either version 3 of the
  ~ License, or (at your option) any later version.
  ~
  ~ An additional term exception under section 7 of the GNU Affero
  ~ General Public License, version 3, is available at
  ~ http://developer.catrobat.org/license_additional_term
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU Affero General Public License for more details.
  ~
  ~ You should have received a copy of the GNU Affero General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="24dp"
    android:layout_marginRight="24dp"
    android:background="@drawable/godot_dialog_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/project_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/new_project_name"
            android:textColor="@color/main_menu_button_text_color"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/project_name_edittext"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/godot_edittext_selector"
            android:paddingLeft="14dp"
            android:paddingRight="14dp"
            android:hint="@string/new_project_dialog_hint"
            android:textColor="@color/main_menu_button_text_color"
            android:textColorHint="@color/godot_text_secondary"
            android:textSize="15sp"
            android:inputType="text"
            android:maxLines="1"
            android:selectAllOnFocus="true"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/new_project_choose_template"
            android:textColor="@color/godot_text_secondary"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:letterSpacing="0.06" />

        <RadioGroup
            android:id="@+id/project_template_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/project_empty_radio_button"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/project_empty_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="52dp"
                android:layout_marginBottom="10dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:background="@drawable/godot_option_card_normal"
                android:button="@null"
                android:drawableRight="@android:drawable/btn_radio"
                android:drawableEnd="@android:drawable/btn_radio"
                android:gravity="center_vertical"
                android:textColor="@color/main_menu_button_text_color"
                android:textSize="15sp"
                android:text="@string/new_project_empty" />

            <RadioButton
                android:id="@+id/project_default_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="52dp"
                android:layout_marginBottom="10dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:background="@drawable/godot_option_card_normal"
                android:button="@null"
                android:drawableRight="@android:drawable/btn_radio"
                android:drawableEnd="@android:drawable/btn_radio"
                android:gravity="center_vertical"
                android:textColor="@color/main_menu_button_text_color"
                android:textSize="15sp"
                android:text="@string/new_project_default" />

            <RadioButton
                android:id="@+id/project_default_drone_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="52dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:background="@drawable/godot_option_card_normal"
                android:button="@null"
                android:drawableRight="@android:drawable/btn_radio"
                android:drawableEnd="@android:drawable/btn_radio"
                android:gravity="center_vertical"
                android:textColor="@color/main_menu_button_text_color"
                android:textSize="15sp"
                android:text="@string/new_project_default_drone"
                android:visibility="gone"/>
        </RadioGroup>
    </LinearLayout>

</ScrollView>
